parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Controllers/Users/UsersController.Manage.cs.pp
namespace $rootnamespace$.Controllers.Users
{
    using System.Web.Mvc;

    public partial class UsersController
    {
        public ActionResult Manager(int page = 1, int pageSize = 10)
        {
            var model = UserService.Page(page, pageSize);
            return View(model);
        }

    }
}
